// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          disabled={true}
          placeholder=" "
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gyVdQG"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fKJsvd"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM kCrhnX"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder=" "
          readOnly={true}
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM rfNrG"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gbFqDM bpVKgd"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM bTiLCz"
          dir="rtl"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-edwNYl epHbuE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="medium"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM oizIL"
        placeholder="large"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM gnHsuw"
          placeholder="xlarge"
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gdmOoz"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fwbcJs"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk fMtNhl"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
